--- a/Core/View/Master/EditView.html.twig
+++ b/Core/View/Master/EditView.html.twig
@@ -27,15 +27,15 @@
 <script>
     function editViewDelete(viewName) {
         bootbox.confirm({
-            title: "{{ i18n.trans('confirm-delete') }}",
-            message: "{{ i18n.trans('are-you-sure') }}",
+            title: "{{ trans('confirm-delete') }}",
+            message: "{{ trans('are-you-sure') }}",
             closeButton: false,
             buttons: {
                 cancel: {
-                    label: '<i class="fas fa-times"></i> {{ i18n.trans('cancel') }}'
+                    label: '<i class="fas fa-times"></i> {{ trans('cancel') }}'
                 },
                 confirm: {
-                    label: '<i class="fas fa-check"></i> {{ i18n.trans('confirm') }}',
+                    label: '<i class="fas fa-check"></i> {{ trans('confirm') }}',
                     className: "btn-danger"
                 }
             },
@@ -58,10 +58,10 @@
 </div>
 
 <form id="form{{ currentView.getViewName() }}" method="post" enctype="multipart/form-data">
+    {{ formToken() }}
     <input type="hidden" name="action" value="{{ action }}"/>
     <input type="hidden" name="activetab" value="{{ currentView.getViewName() }}"/>
     <input type="hidden" name="code" value="{{ currentView.model.primaryColumnValue() }}"/>
-    <input type="hidden" name="multireqtoken" value="{{ fsc.multiRequestProtection.newToken() }}"/>
     <div class="{{ currentView.settings.card ? 'card shadow' : '' }}">
         <div class="{{ currentView.settings.card ? 'card-body' : 'container-fluid' }}">
             <div class="row">
@@ -72,7 +72,7 @@
                     {% if fieldCount > 30 and currentView.settings.btnSave %}
                         <button class="btn btn-sm btn-primary" type="submit">
                             <i class="fas fa-save fa-fw" aria-hidden="true"></i>
-                            <span class="d-none d-sm-inline-block">{{ i18n.trans('save') }}</span>
+                            <span class="d-none d-sm-inline-block">{{ trans('save') }}</span>
                         </button>
                     {% endif %}
                 </div>
@@ -82,13 +82,15 @@
                     {{ group.edit(currentView.model) | raw }}
                 {% endfor %}
             </div>
-            <div class="row">
+        </div>
+        <div class="{{ currentView.settings.card ? 'card-footer p-2' : 'container-fluid' }}">
+            <div class="form-row">
                 {% if fsc.hasData and currentView.settings.btnDelete %}
                     <div class="col-auto">
                         <button type="button" class="btn btn-sm btn-danger"
                                 onclick="editViewDelete('{{ currentView.getViewName() }}');">
                             <i class="fas fa-trash-alt fa-fw" aria-hidden="true"></i>
-                            <span class="d-none d-sm-inline-block">{{ i18n.trans('delete') }}</span>
+                            <span class="d-none d-sm-inline-block">{{ trans('delete') }}</span>
                         </button>
                     </div>
                 {% endif %}
@@ -102,13 +104,13 @@
                     {% if currentView.settings.btnUndo %}
                         <button class="btn btn-sm btn-secondary" type="reset">
                             <i class="fas fa-undo fa-fw" aria-hidden="true"></i>
-                            <span class="d-none d-sm-inline-block">{{ i18n.trans('undo') }}</span>
+                            <span class="d-none d-sm-inline-block">{{ trans('undo') }}</span>
                         </button>
                     {% endif %}
                     {% if currentView.settings.btnSave %}
                         <button class="btn btn-sm btn-primary" type="submit">
                             <i class="fas fa-save fa-fw" aria-hidden="true"></i>
-                            <span class="d-none d-sm-inline-block">{{ i18n.trans('save') }}</span>
+                            <span class="d-none d-sm-inline-block">{{ trans('save') }}</span>
                         </button>
                     {% endif %}
                 </div>
