Tarea #2860 - Rediseño del spinner loader

--- a/Core/View/Master/MicroTemplate.html.twig
+++ b/Core/View/Master/MicroTemplate.html.twig
@@ -55,6 +55,7 @@
     {% block fullBody %}
         <body>
             {% block messages %}
+                {% include 'Macro/Toasts.html.twig' %}
                 {% from 'Macro/Utils.html.twig' import message as showMessage %}
                 {{ showMessage(log, ['error', 'critical'], 'danger') }}
                 {{ showMessage(log, ['warning'], 'warning') }}
