--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -23,140 +23,137 @@
     <br/>
     <br/>
     <br/>
+    <br/>
+    <br/>
 {% endblock %}
 
 {% block body %}
-    <form method="post" onsubmit="animateSpinner('add');">
+    <form id="fReportTaxes" method="post">
+        {{ formToken() }}
         <input type="hidden" name="action" value="export"/>
-        <div class="container" style="margin-top: -60px;">
+        <input type="hidden" name="source" value="sales"/>
+        <div class="container" style="margin-top: -90px;">
             <div class="row">
                 <div class="col-12">
                     <div class="card shadow mb-3">
                         <div class="card-body">
-                            <h1 class="h3 mb-3">
+                            <h1 class="h3 mb-1">
                                 <i class="{{ fsc.getPageData().icon }}"></i> {{ fsc.title }}
                             </h1>
+                            <p class="text-muted mb-4">{{ trans('report-taxes-p') }}</p>
                             <div class="form-row">
-                                <div class="col-sm">
-                                    <div class="form-group">
-                                        {{ i18n.trans('company') }}
+                                {% if fsc.empresa.count() > 1 %}
+                                    <div class="col-sm mb-3">
+                                        {{ trans('company') }}
                                         <select name="idempresa" class="form-control">
                                             {% for empresa in fsc.empresa.all() %}
                                                 {% if empresa.idempresa == fsc.idempresa %}
-                                                    <option value="{{ empresa.idempresa }}"
-                                                            selected="">{{ empresa.nombrecorto | raw }}</option>
+                                                    <option value="{{ empresa.idempresa }}" selected>
+                                                        {{ empresa.nombrecorto | raw }}
+                                                    </option>
                                                 {% else %}
-                                                    <option value="{{ empresa.idempresa }}">{{ empresa.nombrecorto | raw }}</option>
+                                                    <option value="{{ empresa.idempresa }}">
+                                                        {{ empresa.nombrecorto | raw }}
+                                                    </option>
                                                 {% endif %}
                                             {% endfor %}
                                         </select>
                                     </div>
-                                </div>
-                                <div class="col-sm">
-                                    <div class="form-group">
-                                        {{ i18n.trans('invoices') }}
-                                        <select name="source" class="form-control">
-                                            {% if fsc.source == 'purchases' %}
-                                                <option value="sales">{{ i18n.trans('sales') }}</option>
-                                                <option value="purchases"
-                                                        selected="">{{ i18n.trans('purchases') }}</option>
+                                {% else %}
+                                    <input type="hidden" name="idempresa" value="{{ fsc.idempresa }}"/>
+                                {% endif %}
+                                <div class="col-sm mb-3">
+                                    {{ trans('serie') }}
+                                    <select name="codserie" class="form-control">
+                                        <option value="">{{ trans('all') }}</option>
+                                        <option value="">------</option>
+                                        {% for serie in fsc.serie.all({}, {'descripcion': 'ASC'}, 0, 0) %}
+                                            {% if serie.codserie == fsc.codserie %}
+                                                <option value="{{ serie.codserie }}" selected>
+                                                    {{ serie.descripcion | raw }}
+                                                </option>
                                             {% else %}
-                                                <option value="sales" selected="">{{ i18n.trans('sales') }}</option>
-                                                <option value="purchases">{{ i18n.trans('purchases') }}</option>
+                                                <option value="{{ serie.codserie }}">{{ serie.descripcion | raw }}</option>
                                             {% endif %}
-                                        </select>
-                                    </div>
+                                        {% endfor %}
+                                    </select>
                                 </div>
-                                <div class="col-sm">
-                                    <div class="form-group">
-                                        {{ i18n.trans('serie') }}
-                                        <select name="codserie" class="form-control">
-                                            <option value="">{{ i18n.trans('all') }}</option>
-                                            <option value="">------</option>
-                                            {% for serie in fsc.serie.all({}, {'descripcion': 'ASC'}, 0, 0) %}
-                                                {% if serie.codserie == fsc.codserie %}
-                                                    <option value="{{ serie.codserie }}"
-                                                            selected="">{{ serie.descripcion | raw }}</option>
-                                                {% else %}
-                                                    <option value="{{ serie.codserie }}">{{ serie.descripcion | raw }}</option>
-                                                {% endif %}
-                                            {% endfor %}
-                                        </select>
-                                    </div>
+                                <div class="col-sm mb-3">
+                                    {{ trans('currency') }}
+                                    <select name="coddivisa" class="form-control">
+                                        {% for divisa in fsc.divisa.all({}, {'descripcion': 'ASC'}, 0, 0) %}
+                                            {% if divisa.coddivisa == fsc.coddivisa %}
+                                                <option value="{{ divisa.coddivisa }}" selected>
+                                                    {{ divisa.descripcion | raw }}
+                                                </option>
+                                            {% else %}
+                                                <option value="{{ divisa.coddivisa }}">{{ divisa.descripcion | raw }}</option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
                                 </div>
-                                <div class="col-sm">
-                                    <div class="form-group">
-                                        {{ i18n.trans('currency') }}
-                                        <select name="coddivisa" class="form-control">
-                                            {% for divisa in fsc.divisa.all({}, {'descripcion': 'ASC'}, 0, 0) %}
-                                                {% if divisa.coddivisa == fsc.coddivisa %}
-                                                    <option value="{{ divisa.coddivisa }}"
-                                                            selected="">{{ divisa.descripcion | raw }}</option>
-                                                {% else %}
-                                                    <option value="{{ divisa.coddivisa }}">{{ divisa.descripcion | raw }}</option>
-                                                {% endif %}
-                                            {% endfor %}
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-sm">
-                                    <div class="form-group">
-                                        {{ i18n.trans('country') }}
-                                        <select name="codpais" class="form-control">
-                                            <option value="">{{ i18n.trans('all') }}</option>
-                                            <option value="">------</option>
-                                            {% for pais in fsc.pais.all({}, {'nombre': 'ASC'}, 0, 0) %}
-                                                {% if pais.codpais == fsc.codpais %}
-                                                    <option value="{{ pais.codpais }}"
-                                                            selected="">{{ pais.nombre | raw }}</option>
-                                                {% else %}
-                                                    <option value="{{ pais.codpais }}">{{ pais.nombre | raw }}</option>
-                                                {% endif %}
-                                            {% endfor %}
-                                        </select>
-                                    </div>
+                                <div class="col-sm mb-3">
+                                    {{ trans('country') }}
+                                    <select name="codpais" class="form-control">
+                                        <option value="">{{ trans('all') }}</option>
+                                        <option value="">------</option>
+                                        {% for pais in fsc.pais.all({}, {'nombre': 'ASC'}, 0, 0) %}
+                                            {% if pais.codpais == fsc.codpais %}
+                                                <option value="{{ pais.codpais }}" selected>
+                                                    {{ pais.nombre | raw }}
+                                                </option>
+                                            {% else %}
+                                                <option value="{{ pais.codpais }}">{{ pais.nombre | raw }}</option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
                                 </div>
                             </div>
-                            <div class="form-row align-items-end">
-                                <div class="col-sm-3">
-                                    <div class="form-group">
-                                        {{ i18n.trans('date') }}
-                                        <select name="type-date" class="form-control">
-                                            <option value="create" {{ fsc.typeDate is same as('create') ? 'selected': '' }}>{{ i18n.trans('creation-date') }}</option>
-                                            <option value="accrual" {{ fsc.typeDate is same as('accrual') ? 'selected': '' }}>{{ i18n.trans('accrual-date') }}</option>
-                                        </select>
-                                    </div>
+                            <div class="form-row">
+                                <div class="col-sm-3 mb-3">
+                                    {{ trans('date') }}
+                                    <select name="type-date" class="form-control">
+                                        <option value="create" {{ fsc.typeDate == 'create' ? 'selected': '' }}>
+                                            {{ trans('creation-date') }}
+                                        </option>
+                                        <option value="accrual" {{ fsc.typeDate == 'accrual' ? 'selected': '' }}>
+                                            {{ trans('accrual-date') }}
+                                        </option>
+                                    </select>
                                 </div>
-                                <div class="col-sm-3">
-                                    <div class="form-group">
-                                        {{ i18n.trans('from-date') }}
-                                        <input type="date" name="datefrom" value="{{ fsc.datefrom }}"
-                                               class="form-control" required=""/>
-                                    </div>
+                                <div class="col-sm-3 mb-3">
+                                    {{ trans('from-date') }}
+                                    <input type="date" name="datefrom" value="{{ fsc.datefrom }}" class="form-control"
+                                           required/>
                                 </div>
-                                <div class="col-sm-3">
-                                    <div class="form-group">
-                                        {{ i18n.trans('until-date') }}
-                                        <input type="date" name="dateto" value="{{ fsc.dateto }}" class="form-control"
-                                               required=""/>
-                                    </div>
+                                <div class="col-sm-3 mb-3">
+                                    {{ trans('until-date') }}
+                                    <input type="date" name="dateto" value="{{ fsc.dateto }}" class="form-control"
+                                           required/>
+                                </div>
+                                <div class="col-sm-3 mb-3">
+                                    {{ trans('format') }}
+                                    <select name="format" class="form-control">
+                                        <option value="PDF">PDF</option>
+                                        <option value="CSV">CSV</option>
+                                        <option value="XLS">Excel</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="form-row">
+                                <div class="col-sm">
+                                    <button type="button" onclick="sendReportTaxes('purchases')"
+                                            class="btn btn-block btn-secondary btn-spin-action">
+                                        {{ trans('purchases') }}
+                                    </button>
                                 </div>
                                 <div class="col-sm">
-                                    <div class="form-group">
-                                        {{ i18n.trans('format') }}
-                                        <select name="format" class="form-control">
-                                            <option value="PDF">PDF</option>
-                                            <option value="CSV">CSV</option>
-                                            <option value="XLS">Excel</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-sm">
-                                    <div class="form-group">
-                                        <button type="submit" class="btn btn-block btn-primary btn-spin-action">
-                                            {{ i18n.trans('generate') }}
-                                        </button>
-                                    </div>
+                                    <button type="button" onclick="sendReportTaxes('sales')"
+                                            class="btn btn-block btn-primary btn-spin-action">
+                                        {{ trans('sales') }}
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -165,4 +162,17 @@
             </div>
         </div>
     </form>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        function sendReportTaxes(source) {
+            let form = document.getElementById('fReportTaxes');
+            form.source.value = source;
+            form.submit();
+
+            animateSpinner('add');
+        }
+    </script>
 {% endblock %}
